BUG: 272578

Fix point density:
  -points are evenly spaced in X.  Window size or aspect ratio are ignored.
  -low: 9  med: 27 high: 81

Seems to work ok(is) though I find this an odd feature.



git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1233286 283d02a7-25f6-0310-bc7c-ecb5cbfe19da